feat: add Unit1

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -4,7 +4,7 @@
 
 In this section, you are asked to write an essay based on the following chart. In your writing,you should<br>
 
-1. interpret the chart and 
+1. interpret the chart and
 2. give your comments.
 
 ![Chart](./assets/41.jpg)
@@ -188,8 +188,8 @@ Write an essay on the chart. In your essay, you should
 ### Example
 
 &emsp;&emsp;The column chart demonstrates the Gross Merchandise Volume(GMV) of live broadcasting electronic commerce in
-China from 2017 to 2024. Between 2017 and 2019, the GMV increased mildly from RMB 16.8 billion to 416.8 billion yuan. By
-contrast, it jumped considerably from RMB 416.8 billion to 5316.6 billion from 2019 to 2024.<br>
+China from 2017 to 2024. Between 2017 and 2019, the GMV increased mildly from RMB 16.8 billion to 416.8 billion, a rise
+of 400 billion yuan. By contrast, it jumped considerably from RMB 416.8 billion to 5316.6 billion from 2019 to 2024.<br>
 &emsp;&emsp;The booming of live broadcasting exerts a profound influence on our society. On the one hand, China is
 witnessing the Internet swarming with wanghong, the grass-root Internet celebrities who win nationwide popularity by
 pulling stunts. As a result, a large number of consumers are willing to shop online via the live broadcasting of these
