--- a/math/linear_algebra/matrix.tex
+++ b/math/linear_algebra/matrix.tex
@@ -827,6 +827,7 @@
     \subsection{条件转换思路}
 
     \begin{enumerate}
+        \item $n$阶矩阵$A$秩小于$n \Rightarrow |A| = 0$
         \item 设 $\mathbf{A}$ 是 $m \times n$ 矩阵，$\mathbf{B}$ 是 $n \times s$ 矩阵，若 $\mathbf{AB} = \mathbf{O}$，则
         \begin{enumerate}
             \item $\mathbf{B}$ 的列向量是齐次方程组 $\mathbf{Ax} = 0$ 的解
