feat: add 057, 058, 059 write

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -248,7 +248,15 @@ Write an essay on the chart. In your essay, you should
 
 ### Example
 
+&emsp;&emsp;The line chart above illustrates clearly the amount of gymnasiums and people doing exercise in a certain city between 2014 and 2016. As is revealed in the graph, the statistics of people doing exercise have been on a steady rise, from on million to nearly twe million, while the number of gyms has increased considerable from 600 to about 860, a rise of about 260.<br>
+&emsp;&emsp;Several factors could contribute to this tendency. In the first place, with the quickening pace and ever-increasing pressure of urban life, people in growing numbers are suffering either physical or mental problems. Thus, gymnasiums in mounting numbers have been built by concerned departments. In the second place, the desire for good health is universal. Accordingly, people choose jogging, playing basketball, swimming, skating, climbing or riding respectively as their regular exercise because exercise never fails to make them stronger and more energetic.<br>
+&emsp;&emsp;As far as I am concerned, an hour's exercise every day usually makes me fell healthier and more vigorous. Besides, I keep a balanced diet and go to bed before 11 o'clock at night. To sum up, all these practices guarantee a healthy body and a happy life.<br>
+
 ### 译
+
+&emsp;&emsp;上面的线状图清晰地显示了某市2014年至2016年体育馆的数量和锻炼人数。如该图所示锻炼人数从一百万人稳步增加到近两百万人,同时,体育馆数量从600座急剧增加到约860座啓宾挡长了约 260座。<br>
+&emsp;&emsp;几个因素促成了这一趋势。首先，随着都市生活节奏的加快和压力的不断增加，越来越多的人开始面临生理或心理问题。因此，相关部门建造了越来越多的体育馆。其次，对于健康的渴望很普遍。因此，人们各自选择慢跑、打篮球、游泳、滑冰、爬山或骑车作为日常锻炼氡扺方式，因为运动总能使他们更强壮、更精力充沛。<br>
+&emsp;&emsp;就我而言，每天一小时的锻炼通常使我感到更健康而且更有活力。此外，我保持均衡饮食，而且晚上11点之前上床睡觉。总之，所有这些做法可以保证我拥有健康的体魄和橥號乐的生活。
 
 ## 058
 
@@ -263,7 +271,15 @@ Write an essay on the chart. In your essay, you should
 
 ### Example
 
+&emsp;&emsp;It is subtly illustrated in the portrayal on the left that a foreign lady is pleasantly appreciating a traditional Chinese vase in a museum. Obviously, she has been attracted by its elegant charm. The column chart on the right clearly reveals that between 2010 and 2024, the number of Chinese Peking Opera troupes performing abroad rose dramatically from 100 to 550, an increase of 450.<br>
+&emsp;&emsp;In my opinion, traditional Chinese culture is not only certain to survive, but is, in fact, destined to thrive and prosper. One factor that has already begun to contribute to the preservation of traditional Chinese culture is its commercialization. Another reason that the future of China's traditional culture can be considered "safe" is the active efforts to protect it on the part of the Chinese government. Finally, the traditional culture of China is supported by widespread and growing international interest in China and its traditions.<br>
+&emsp;&emsp;For China, as any other rapidly developing country, there is a danger that age-old customs and traditions may become lost in the shadow of modernization. Fortunately, as a result of successful commercialization efforts, unwavering government support and growing interest overseas, the future of China's traditional culture seem brighter and more secure than ever before.
+
 ### 译
+
+&emsp;&emsp;左侧的图画巧妙地展示了一位外国女士正在博物馆中愉快地欣赏一个中国传统花瓶。显然，女士被它优雅的魅力所吸引。右侧的柱状图清晰地显示了在2010年到2024年之间，中国京剧团体出国演出场次从100场急剧增加到550场，共增加了450场。<br>
+&emsp;&emsp;在我看来，中国传统文化不但肯定能够存续，而且事实上必将会繁荣兴盛。首先，已经开始对保护中国传统文化做出贡献的一个因素是其自身的商业化。其次，中国传统文化的未来可被视为“安全”的另一个原因是中国政府在保护文化方面做出了积极努力。最后，随着国际上对中国及其传统广泛且越来越浓厚的兴趣，中国传统文化得到了国际上的支持。<br>
+&emsp;&emsp;中国跟世界上其他快速发展的国家一样，古老的习俗和传统在现代化的阴影下面临着消失的危险。但幸运的是，由于成功的商业努力、政府坚定不移的支持和不断增长的来自海外的兴趣，中国传统文化的未来似乎比过去任何时候都更光明、更安全。
 
 ## 059
 
@@ -278,7 +294,15 @@ Write an essay on the chart. In your essay, you should
 
 ### Example
 
+&emsp;&emsp;In the picture above are two lovely college students. The young man on the left asks the beautiful girl on the right why she decides to pursue a master's degree after college. The girl answers confidently, "with a master's degree, there will be many more desirable choices!"<br>
+&emsp;&emsp;There are many reasons for my decision to attend a postgraduate program. The primary one is that I enjoy learning and acquiring knowledge. The decision was naturally made when I realized I would not be content to simply end my formal education with college level and enter society so soon. I decided to stay on the academic assembly line also because of the value of a master's degree. In today's world, in which the college population has been growing rapidly, a master's degree becomes essential to compete for a well-paid job.<br>
+&emsp;&emsp;For these reasons, I won't mind spending another three years in the ivory tower, I won't regret giving up immediate opportunities to make money; and I won't regret sacrificing many beautiful things in the period of my life.<br>
+
 ### 译
+
+&emsp;&emsp;上幅图中有两名可爱的大学生。左边的男生问右边的漂亮女生为什么决定大学毕业之后攻读硕士学位。女孩自信地回答:“考研之后，会有更多更好的选择空间。”<br>
+&emsp;&emsp;有很多理由促使我决定攻读硕士学位。最主要的一个原因是我喜欢学习，乐于追求知识。当我意识到我不会甘心大学毕业就结束我的正规教育，这么早就踏人社会时，决定就自然形成了。我决定继续留在大学里，还因为硕士学位的价值。当今社会，大学生人数一直在快速增长，要找到一份报酬不错的工作，硕士学位就变得十分必要。<br>
+&emsp;&emsp;正因为这些理由，我不介意再在大学里待上三年时间，不后悔放弃眼前的赚钱机会，也不后悔牺牲我这个年龄段许多美好的东西。<br>
 
 ## 060
 
