--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -248,7 +248,7 @@ Write an essay on the chart. In your essay, you should
 
 ### Example
 
-&emsp;&emsp;The line chart above illustrates clearly the amount of gymnasiums and people doing exercise in a certain city between 2014 and 2016. As is revealed in the graph, the statistics of people doing exercise have been on a steady rise, from on million to nearly twe million, while the number of gyms has increased considerable from 600 to about 860, a rise of about 260.<br>
+&emsp;&emsp;The line chart above illustrates clearly the amount of gymnasiums and people doing exercise in a certain city between 2014 and 2016. As is revealed in the graph, the statistics of people doing exercise have been on a steady rise, from one million to nearly two million, while the number of gyms has increased considerable from 600 to about 860, a rise of about 260.<br>
 &emsp;&emsp;Several factors could contribute to this tendency. In the first place, with the quickening pace and ever-increasing pressure of urban life, people in growing numbers are suffering either physical or mental problems. Thus, gymnasiums in mounting numbers have been built by concerned departments. In the second place, the desire for good health is universal. Accordingly, people choose jogging, playing basketball, swimming, skating, climbing or riding respectively as their regular exercise because exercise never fails to make them stronger and more energetic.<br>
 &emsp;&emsp;As far as I am concerned, an hour's exercise every day usually makes me fell healthier and more vigorous. Besides, I keep a balanced diet and go to bed before 11 o'clock at night. To sum up, all these practices guarantee a healthy body and a happy life.<br>
 
