feat: update Unit5

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -225,7 +225,7 @@ in tourism has accounted for 4.5% of national GDP and 12% of the value added in 
 &emsp;&emsp;Many countries are striving to develop their national tourism because it really has a lot of advantages.
 First and foremost, travel provides many opportunities to promote exchanges among people from diverse cultural
 backgrounds. For instance, since the reform and opening-up, China, a country which has rich tourism resources, receives
-millions of foreign tourists every year. Moreover, travel increases one's knowledge, widens one's horizons ande enhances 
+millions of foreign tourists every year. Moreover, travel increases one's knowledge, widens one's horizons and enhances 
 mutual understanding. Finally, tourism boosts local economy and promotes commercial exchanges.<br>
 &emsp;&emsp;In my opinion, we should make good use of rich tourism resources to make our motherland more beautiful.
 
