feat: add 043 write

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -47,6 +47,29 @@ satisfied with their jobs.<br>
 jobs. And it is advisable that people should adjust their expectations for work, and that companies should pay more
 attention to the welfare of their staff.<br>
 
+## 043
+
+### Directions
+
+In this section, you are asked to write an essay based on the following chart. In your writing,you should<br>
+
+1. interpret the chart and
+2. give your comments.
+
+![Chart](./assets/43.jpg)
+
+### Example
+
+&emsp;&emsp;The pie chart clearly illustrates the purposes of touring for students in a certain university. As is reflected by the diagram, 37 percent of cllege students travel in order to appreciate the scenery. Next comes the aim of relieving pressure, accounting for 33 percent. By contrast, the percentages of students travelling aiming at other goals, making friends and clutivating independence account for 15%, 9% and 6% respectively.<br>
+&emsp;&emsp;Several primary factors could contribute to the phenomenon. In the first place, travel can offer us a wide range of experiences. In travelling, we may experience the bitterness and joy of people on different lands and in different times. In the sencond place, college students, who have to juggle academic work, romantic relationships and a busy social calendar, are particularly susceptible to pressure. By touring, they can successfully manage and reduce stress.<br>
+&emsp;&emsp;Taking all these factors into consideration, we may predict that with the quickening pace and ever-increasing pressureof campus life, the number of university students touring will keep growing in the forthcoming decade.
+
+### 译文
+
+&emsp;&emsp;这幅饼状图清楚地揭示了某高校大学生的旅游目的。如图表所示，37%的大学生为了欣赏风景而旅游。接下来是为了缓解压力，占了33%。相比之下，为了其他目的、广交朋友、培养独立能力而旅游的大学生百分比分别占15%、9%和6%。<br>
+&emsp;&emsp;一些主要原因可以解释这种现象。首先，旅游能够充实我们的经历。在旅行中，我们可以体验不同时代、不同国土上人们的酸甜苦辣。其次，大学生不得不应对学习、恋爱和繁忙的社交日程，很容易感受到压力。通过旅游，他们可以成功地应对并缓解压力。<br>
+&emsp;&emsp;考虑到所有这些因素，我们可以预计，随着校园生活节奏的加快和日益增加的压力旅游的大学生数量在未来十年将持续增加。
+
 ## 051
 
 ### Directions
@@ -308,11 +331,19 @@ Write an essay on the chart. In your essay, you should
 
 ### Directions
 
-Write an essay on the chart. In your essay, you should
+&emsp;&emsp;Read the following excerpt from an article and write an essay. In your essay, you should explainwhether or to what extent you agree with the author, Support your argument with reasons and relevantexamples.
 
-1. describe and interpret the chart, and
-2. give your comments.
+&emsp;&emsp;Changing technology stimulates the brain and increases intelligence, But that may onlybe true if technology challenges us. In a world run by intelligent machines, our lives could geta lot simpler, Would that make us less intelligent? Artificial intelligence is taking over manyhuman jobs. For instance, planes are being flown much of the time by automatic pilots. Andthe complex problem of controlling air traffic around large modern airports is also achievedby artificial intelligence that operates well beyond the capability of mere human air trafficcontrollers, Artificial intelligence is embedded in many features of modern life for a simplereason that intelligent machines can already outperform humans, including some aptitudeswhere there was once thought to be a human advantage, such as playing chess, and writingpoetry, or even novels<br>
+&emsp;&emsp;As machines get smarter, they will do more of our thinking for us and make life easier.In the future, the electronic assistant will develop to the point that it serves similar functions as a real living butler, fulfilling requests such as: "Organize a dinner party for six on Thursday, and invite the usual guest." At that point, our long strggle with challenging technologies is at an end. We can take it easy kowning that the hard work of planning and organizing is being done by a better brain-the electronic assistant. Starved with mental effort, our brains well regress.
 
 ### Example
 
+&emsp;&emsp;Currently, great achievements have been made in the field of artificial intelligence, which is taking over a good number of human jobs. In the excerpt, the author assumes that since artificial intelligence can plan and organize for us, our brains will regress. I disagree with the author's opinion.<br>
+&emsp;&emsp;I cling to the idea that even if intelligent machines are getting increasingly smarter, our world will never be like a scene from science fiction in which human brains are infirior. To being with, no matter how superior its abilities are in certain areas, artificial intelligence needs us just as much as we need it. In other words, computer-based artificial intelligence has to rely on humans for maintenance to ensure its existence. What is more, face-to-face interactions between humans can never be replaced by machines. Intelligent machines are unlikely to develop human-like aocial competence, which requires empathy, sensitivity to tone, etc.<br>
+&emsp;&emsp;To sum up, concern about whether artificial intelligence will make our brains regress is caused by an overestimation of the impact of technology on humans.
+
 ### 译
+
+&emsp;&emsp;目前，人工智能领域已取得了巨大成就，人工智能正在接管很多人类所从事的工作。在这篇选段中，作者认为我们的大脑会退化，因为人工智能会为我们计划和组织工作。我不赞同作者的观点。<br>
+&emsp;&emsp;我坚持认为，尽管智能机器正在变得越来越智能化，但我们的世界永远不会像科幻小说的场景中那样，人脑比不上智能机器。首先，不管智能机器的能力在某些领域有多高级，人工智能对我们的需要跟我们对它的需要一样多。换言之，以计算机为基础的人工智能不得不依赖人类的维护才能确保自身的存在。其次，机器永远不可能替代人与人之间面对面的互动。智能机器不太可能发展出像人类一样的社交能力，这需要同理心、对语气的敏感度等。<br>
+&emsp;&emsp;综上所述，对于人工智能是否会造成我们大脑退化的担忧，是因为高估了技术对人类的影响。
