feat: add connectors of grammar

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -60,9 +60,9 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;The pie chart clearly illustrates the purposes of touring for students in a certain university. As is reflected by the diagram, 37 percent of cllege students travel in order to appreciate the scenery. Next comes the aim of relieving pressure, accounting for 33 percent. By contrast, the percentages of students travelling aiming at other goals, making friends and clutivating independence account for 15%, 9% and 6% respectively.<br>
-&emsp;&emsp;Several primary factors could contribute to the phenomenon. In the first place, travel can offer us a wide range of experiences. In travelling, we may experience the bitterness and joy of people on different lands and in different times. In the sencond place, college students, who have to juggle academic work, romantic relationships and a busy social calendar, are particularly susceptible to pressure. By touring, they can successfully manage and reduce stress.<br>
-&emsp;&emsp;Taking all these factors into consideration, we may predict that with the quickening pace and ever-increasing pressureof campus life, the number of university students touring will keep growing in the forthcoming decade.
+&emsp;&emsp;The pie chart clearly illustrates the purposes of touring for students in a certain university. As is reflected by the diagram, 37 percent of college students travel in order to appreciate the scenery. Next comes the aim of relieving pressure, accounting for 33 percent. By contrast, the percentages of students travelling aiming at other goals, making friends and clutivating independence account for 15%, 9% and 6% respectively.<br>
+&emsp;&emsp;Several primary factors could contribute to this phenomenon. In the first place, travel can offer us a wide range of experiences. In travelling, we may experience the bitterness and joy of people on different lands and in different times. In the sencond place, college students, who have to juggle academic work, romantic relationships and a busy social calendar, are particularly susceptible to pressure. By touring, they can successfully manage and reduce stress.<br>
+&emsp;&emsp;Taking all these factors into consideration, we may predict that with the quickening pace and ever-increasing pressure of campus life, the number of university students touring will keep growing in the forthcoming decade.
 
 ### 译文
 
@@ -83,8 +83,8 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;The pie chart above clearly reveals the factors of consumers' concern on choosingrestaurants in a certain city in 2017. Among all the five categories, the percentages of feature, service and environment are the highest, accounting for 36.3%, 26.8% and 23.8% respectively. On the contrary, the statistics of price and other factors take up merely 8.4% and 4.7% respectively, the lowest among the five groups.<br>
-&emsp;&emsp;Several primary causes that contribute to the above-mentioned phenomenon could be summarized as follows. In the first place, with the prosperity of economy in China and the increase of people's income in recent decades, a large number of people are paying more attention to the feature of a restaurant instead of price. In the second place, in a bid to develop interpersonal relationship and enjoy confortable life, consumers in mounting numbers prefer service and environment to other factors.<br>
+&emsp;&emsp;The pie chart above clearly reveals the factors of consumers' concern on choosing restaurants in a certain city in 2017. Among all the five categories, the percentages of feature, service and environment are the highest, accounting for 36.3%, 26.8% and 23.8% respectively. On the contrary, the statistics of price and other factors take up merely 8.4% and 4.7% respectively, the lowest among the five groups.<br>
+&emsp;&emsp;Several primary causes that contribute to the above-mentioned phenomenon could be summarized as follows. In the first place, with the prosperity of economy in China and the increase of people's income in recent decades, a large number of people are paying more attention to the feature of a restaurant instead of price. In the second place, in a bid to develop interpersonal relationship and enjoy comfortable life, consumers in mounting numbers prefer service and environment to other factors.<br>
 &emsp;&emsp;With due consideration of all these contributors, we may predict that with the speedy development of our society, customers in expanding numbers will attach utmost significance to the feature, service as well as environment of a restaurant.
 
 ### 译文
