feat: add 044 write

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -70,6 +70,29 @@ In this section, you are asked to write an essay based on the following chart. I
 &emsp;&emsp;一些主要原因可以解释这种现象。首先，旅游能够充实我们的经历。在旅行中，我们可以体验不同时代、不同国土上人们的酸甜苦辣。其次，大学生不得不应对学习、恋爱和繁忙的社交日程，很容易感受到压力。通过旅游，他们可以成功地应对并缓解压力。<br>
 &emsp;&emsp;考虑到所有这些因素，我们可以预计，随着校园生活节奏的加快和日益增加的压力旅游的大学生数量在未来十年将持续增加。
 
+## 044
+
+### Directions
+
+In this section, you are asked to write an essay based on the following chart. In your writing,you should<br>
+
+1. interpret the chart and
+2. give your comments.
+
+![Chart](./assets/44.jpg)
+
+### Example
+
+&emsp;&emsp;The pie chart above clearly reveals the factors of consumers' concern on choosingrestaurants in a certain city in 2017. Among all the five categories, the percentages of feature, service and environment are the highest, accounting for 36.3%, 26.8% and 23.8% respectively. On the contrary, the statistics of price and other factors take up merely 8.4% and 4.7% respectively, the lowest among the five groups.<br>
+&emsp;&emsp;Several primary causes that contribute to the above-mentioned phenomenon could be summarized as follows. In the first place, with the prosperity of economy in China and the increase of people's income in recent decades, a large number of people are paying more attention to the feature of a restaurant instead of price. In the second place, in a bid to develop interpersonal relationship and enjoy confortable life, consumers in mounting numbers prefer service and environment to other factors.<br>
+&emsp;&emsp;With due consideration of all these contributors, we may predict that with the speedy development of our society, customers in expanding numbers will attach utmost significance to the feature, service as well as environment of a restaurant.
+
+### 译文
+
+&emsp;&emsp;上面的饼状图清晰揭示了 2017年某市消费者选择餐厅时关注的因素。在所有五组分类数据中，特色、服务、环境的百分比是最高的，分别占36.3%、26.8%和 23.8%。相反价格和其他因素的数据分别只占8.4%和4.7%，在这五组中是最低的。<br>
+&emsp;&emsp;造成上述现象的几个主要原因可以概括如下。首先，随着中国经济的繁荣和近几十年来人们收人的增加,很多人越来越关注餐厅的特色,而不是价格。其次,为了拓展人际关系享受舒适的生活，越来越多的消费者更注重服务与环境，而非其他因素。<br>
+&emsp;&emsp;充分考虑到所有这些因素，我们可以预计，随着社会的迅速发展，越来越多的消费者将非常重视餐厅的特色、服务及环境。
+
 ## 051
 
 ### Directions
