feat: add 045 of write

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -93,6 +93,30 @@ In this section, you are asked to write an essay based on the following chart. I
 &emsp;&emsp;造成上述现象的几个主要原因可以概括如下。首先，随着中国经济的繁荣和近几十年来人们收人的增加,很多人越来越关注餐厅的特色,而不是价格。其次,为了拓展人际关系享受舒适的生活，越来越多的消费者更注重服务与环境，而非其他因素。<br>
 &emsp;&emsp;充分考虑到所有这些因素，我们可以预计，随着社会的迅速发展，越来越多的消费者将非常重视餐厅的特色、服务及环境。
 
+## 045
+
+### Directions
+
+In this section, you are asked to write an essay based on the following chart. In your writing,you should<br>
+
+1. interpret the chart and
+2. give your comments.
+
+![Chart](./assets/45.jpg)
+
+### Example
+
+&emsp;&emsp;The bar chart above clearly reflects the survey of residents' exercising ways in a certain city. According to the data given above, the percentage of people exercising alone accounts for 54.3%, the largest in the four categories. The percentages of people exercising with friends, families, and by taking part in group activities take up 47.7%, 23.9% and 15.8% respectively.<br>
+&emsp;&emsp;Several factors that account for the above-mentioned phenomena could be summarized as follows. To start with, the main reason for sports and exercise is to encourage a healthy lifestyle. Exercising and playing sports can have huge benefits for a person's strength, agility, and figure. Furthermore, exercising with friends and families could instill the values of teamwork and sportsmanship. Exercising in general, whether individual or team-based, can teach people how to be sportsmanlike in competitive circumstances.<br>
+&emsp;&emsp;To sum up, by fostering enthusiasm for sports and exercise, society can ensure a generation of healthy and sportsmanlike citizens.
+
+### 译文
+
+&emsp;&emsp;上面的述柱状图清楚地展现了针对某市居民体育锻炼方式的调查。根据上图中给出的数据，独自锻炼的人占 54.3%，在这四类中占比最大。和朋友一起、和家人一起以及通过参加团体活动进行锻炼的人分别占 47.7%、23.9% 和 15.8%。<br>
+&emsp;&emsp;造成上述现象的一些因素可以概括如下。首先，人们进行体育锻炼的主要原因在于它能够鼓励人们保持健康的生活方式。体育锻炼和进行体育活动能在体能、灵活性和身材方面给人带来很大的好处。此外，和朋友、家人一起锻炼能够灌输团队合作和体育精神的价值观。一般来讲，无论是个人项目，还是团队项目，体育锻炼都能够教会人们在竞争的环境中如何具备运动员精神。<br>
+&emsp;&emsp;总之，通过培养对体育锻炼的热情，社会能培养出一代身体健康而又具备体育精神的公民。
+
+
 ## 051
 
 ### Directions
