feat: add 046 write

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -116,6 +116,28 @@ In this section, you are asked to write an essay based on the following chart. I
 &emsp;&emsp;造成上述现象的一些因素可以概括如下。首先，人们进行体育锻炼的主要原因在于它能够鼓励人们保持健康的生活方式。体育锻炼和进行体育活动能在体能、灵活性和身材方面给人带来很大的好处。此外，和朋友、家人一起锻炼能够灌输团队合作和体育精神的价值观。一般来讲，无论是个人项目，还是团队项目，体育锻炼都能够教会人们在竞争的环境中如何具备运动员精神。<br>
 &emsp;&emsp;总之，通过培养对体育锻炼的热情，社会能培养出一代身体健康而又具备体育精神的公民。
 
+## 046
+
+### Directions
+
+In this section, you are asked to write an essay based on the following chart. In your writing,you should<br>
+
+1. interpret the chart and
+2. give your comments.
+
+![Chart](./assets/46.jpg)
+
+### Example
+
+&emsp;&emsp;As can be seen from the bar chart above, the express dilivery business in China has increased considerably between 2018 and 2020. During this three-year period, the total number of express delivery parcels jumped markedly from 51 billion to 83 billion. In the meantime, the number of express delivery parcels in ruural areas rose dramatically from 12 billion to 30 billion.<br>
+&emsp;&emsp;Why is the express delivery business booming nowadays? Several factors may contribute to this phenomenon. To start with, the popularity of electronic commerce and online shopping has laid the foundation for the development of the express delivery business. Moreover, as the express delivery business is becoming increasingly mature and relevant laws and regulations are improved, people who were at first skeptical about express delivery sevice now become convinced that it is safe and reliable.<br>
+&emsp;&emsp;The boom of the express delivery business undoubtedly contributes to the prosperity of China's economy. Accordingly, let us get prepared to embrace this irreversible trend.
+
+### 译文
+
+&emsp;&emsp;从上面的柱状图可以看出,从2018年到2020年,中国快递业务大幅增长。在这三年间快递包裹总件数从510亿激增至830亿。与此同时，农村地区的快递包裹总件数从 120亿跃升至 300亿。<br>
+&emsp;&emsp;为什么如今快递业务发展得如此之快呢?可能有几个因素促成了这个现象。首先，电子商务和网上购物的普及为快递业务的发展打下了基础。其次，随着快递业务日趋成熟以及相关法律法规的完善，起初对快递持怀疑态度的人现在也已经相信快递是安全可靠的。快递业务的迅速发展无疑为中国经济的繁荣做出了贡献。<br>
+&emsp;&emsp;因此，让我们准备好欣然接受这一不可逆转的趋势吧。
 
 ## 051
 
